--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ui-class",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "0.0.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
