--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "ui-class",
   "private": false,
-  "version": "0.0.4",
+  "version": "0.0.8",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -12,6 +13,11 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "release": {
+    "branches": [
+      "master"
+    ]
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
